# tauri-plugin-vicons

./: Cargo.toml  README.md  build.rs  package.json
guest-js/: index.ts
permissions/: default.toml  get-icon.toml  get-symbol.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_icon.toml  get_symbol.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs
