[package]
name = "tauri-plugin-vicons"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-vicons"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
gtk = "0.18.1"
base64 = "0.21.1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
