[package]
name = "tauri-plugin-vicons"
version = "2.0.0"
authors = ["Joaquin (Pato) Decima <jdecima@vasak.net.ar>", "Vasak Group"]
description = "Icon API for Tauri plugins (Created for VasakOS)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-vicons"
repository = "https://github.com/Vasak-OS/tauri-plugin-vicons/"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
gtk = "0.18"
base64 = "0.21"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
